fix section alignments and texts

--- a/css/custom.css
+++ b/css/custom.css
@@ -52,8 +52,11 @@ nav{
 .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link  {
     color:#f69800;
 }
+
+
 .jumbotron{
     border-radius: 0px;
+    margin-bottom: 0px;
 }
 
 #clients{
@@ -68,7 +71,7 @@ nav{
     padding-right: 2.5px;
     padding-left: 1px;
     padding-top: 17px;
-    padding-bottom: 36px;
+    padding-bottom: 13px;
     background: #ff3f00;
 }
 .section-title{
@@ -91,7 +94,6 @@ nav{
    background-attachment: fixed;
    background-position: center; 
 }
-
 
 
 
@@ -290,12 +292,12 @@ nav{
 @media only screen and (min-width: 1200px) {
 
     .title-1{
-        font-size: 10vw;
+        font-size: 6vw;
         letter-spacing: 5.2px;
         line-height: 1.0;
     }
     .title-2{
-        font-size: 6vw;
+        font-size: 5vw;
         letter-spacing: 5.2px;
         line-height: 1.0;
     }
@@ -346,7 +348,7 @@ nav{
     .hovereffect h2 {
     top: 36%;
     text-transform:uppercase;
-    color:#fff;
+    color:#f69800;
     text-align:center;
     position:relative;
     font-size:20px;
